Problem Statement 1/Kubernetes-Deployment/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: abhaydandgedocker/wisecow:2026
        ports:
        - containerPort: 4499
