Problem Statement 1/Kubernetes-Deployment/wisecow-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 4499
  type: ClusterIP
  # we also can do nodeport to run it localy
